Dark mode quick fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,6 +18,14 @@ a {
   box-sizing: border-box;
 }
 
+@media (prefers-color-scheme: dark) {
+
+  * {
+    background: var(--a-gray-900) !important;
+    color: var(--a-gray-200);
+  }
+}
+
 main {
   max-width: 90rem;
   padding: 0 2rem;
